@@ -44,6 +44,7 @@ pkginclude_HEADERS = \
   ExternalAtomEvaluationHeuristics.h \
   ExternalAtomTable.h \
   ExternalLearningHelper.h \
+  ExistsPlugin.h \
   FinalEvalGraph.h \
   FLPModelGeneratorBase.h \
   FLPModelGeneratorBase.tcc \
