@@ -72,6 +72,7 @@
 #include "dlvhex2/StrongNegationPlugin.h"
 #include "dlvhex2/HigherOrderPlugin.h"
 #include "dlvhex2/WeakConstraintPlugin.h"
+#include "dlvhex2/ExistsPlugin.h"
 
 #include <getopt.h>
 #include <sys/types.h>
@@ -427,6 +428,8 @@ int main(int argc, char *argv[])
 			pctx.pluginContainer()->addInternalPlugin(higherOrderPlugin);
 			PluginInterfacePtr weakConstraintPlugin(new WeakConstraintPlugin);
 			pctx.pluginContainer()->addInternalPlugin(weakConstraintPlugin);
+			PluginInterfacePtr existsPlugin(new ExistsPlugin);
+			pctx.pluginContainer()->addInternalPlugin(existsPlugin);
 		}
 
 		// before anything else we dump the logo
