@@ -1,3 +1,9 @@
+2012-12-15  Christoph Redl <redl@kr.tuwien.ac.at>
+
+	* src/ExistsPlugin.cpp: Plugin for existential quantifiers in
+	rule heads
+	* include/dlvhex2/ExistsPlugin.h: Likewise.
+
 2012-11-22  Christoph Redl <redl@kr.tuwien.ac.at>
 
 	* src/ClaspSolver.cpp: Upgrade to clasp 2.1.1.
